# qwebappwrapper

./: CMakeLists.txt  README  config.h.cmake
apps/: CMakeLists.txt  LMS.desktop.cmake  Spotify.desktop.cmake  WhatsApp.desktop.cmake
python/: qwebappwrapper
src/: main.cpp  mainwindow.cpp  mainwindow.h  webenginepage.cpp  webenginepage.h
